@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.themoviedb.org"
        name="The Movie Database"
-       version="3.7.11"
+       version="3.7.12"
        provider-name="XBMC Foundation">
   <requires>
     <import addon="xbmc.metadata" version="2.1.0"/>
     <import addon="metadata.common.imdb.com" version="2.7.8"/>
     <import addon="metadata.common.hdtrailers.net" version="2.0.5"/>
-    <import addon="metadata.common.themoviedb.org" version="2.12.1"/>
+    <import addon="metadata.common.themoviedb.org" version="2.13.1"/>
     <import addon="plugin.video.youtube" version="4.4.10" optional="true"/>
   </requires>
   <extension point="xbmc.metadata.scraper.movies"
